Corrections to content

--- a/style/style.css
+++ b/style/style.css
@@ -50,7 +50,7 @@ body {
 
 .two {
   font-size: 1.2rem;
-  font-weight: lighter;
+  /* font-weight: lighter; */
 }
 
 .three {
@@ -217,14 +217,14 @@ body {
 }
 
 .wish h5 {
-  font-weight: lighter;
+  /* font-weight: lighter; */
   font-size: 2rem;
   margin: 10px 0 0;
 }
 
 .nine p {
   font-size: 2rem;
-  font-weight: lighter;
+  /* font-weight: lighter; */
 }
 
 #replay {
@@ -293,6 +293,6 @@ body {
 
   .nine p {
     font-size: 1.5rem;
-    font-weight: lighter;
+    /* font-weight: lighter; */
   }
 }
